--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,9 @@
-MONGO_URI=mongodb://localhost:27017/sm_system_db
-PORT=4000
+# MONGO_URI=mongodb+srv://saziya34:Ziya@123@cluster0.21m8m.mongodb.net/monu123?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URI=mongodb+srv://saziya34:Ziya%40123@cluster0.21m8m.mongodb.net/monu123?retryWrites=true&w=majority&appName=Cluster0
+
+
+MONGO_URI=mongodb://localhost:27017/instal_clone_db
+# MONGO_URI=mongodb+srv://saziya34:Ziya@123@cluster0.21m8m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
 JWT_SECRET=SuBIO2W7cTB1cHEfyaZ!OtHvOkuCFKvINAv9GCZj8oEEvQqhm4ZEJyvl0kND4VZ0
+
